--- a/addons/we7_car/template/mobile/index.html
+++ b/addons/we7_car/template/mobile/index.html
@@ -40,13 +40,13 @@
 <section style="margin-bottom:30px">
 		<nav>
 			<ul class="nav_links box">
-				<li><a href="{php echo $this->createMobileUrl('index',array('op'=>'about'))}">关于我们</a></li>
+				<!--<li><a href="{php echo $this->createMobileUrl('index',array('op'=>'about'))}">关于我们</a></li>-->
 
-				<li><a href="{php echo $this->createMobileUrl('album')}">车型欣赏</a></li>
+				<!--<li><a href="{php echo $this->createMobileUrl('album')}">车型欣赏</a></li>-->
 
 				<li><a href="{php echo murl('mc')}">会员中心</a></li>
 
-				<li><a href="{php echo $this->createMobileUrl('tool')}">实用小工具</a></li>
+				<!--<li><a href="{php echo $this->createMobileUrl('tool')}">实用小工具</a></li>-->
 			</ul>
 		</nav>
 		<div>
