--- a/addons/lanyu_appointment/template/mobile/welcome.html
+++ b/addons/lanyu_appointment/template/mobile/welcome.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{template 'header'}
+<nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container" align="center">
+        <h4 style="color:white;">{$welcome['title']}</h4>
+    </div>
+</nav>
+<div style="padding: 0px 10px 0px 10px">
+    {$content}
+</div>
 
-</body>
-</html>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container" style="padding-top: 5px;" align="center">
+        <a href="javascript:window.opener=null;window.open('','_self');window.close();">
+            <button class="btn btn-danger" style="width:40%;">取消</button>
+        </a>
+        &nbsp;&nbsp;
+        <a href="{php echo $this->createMobileUrl('types')}">
+            <button class="btn btn-success" style="width:40%;">下一步</button>
+        </a>
+    </div>
+</nav>
+{template 'footer'}
