--- a/addons/lanyu_appointment/template/web/times_post.html
+++ b/addons/lanyu_appointment/template/web/times_post.html
@@ -24,7 +24,16 @@
                         <input type="text" name="time" class="form-control" value="{$theone['time']}" />
                     </div>
                 </div>
-
+                <div class="form-group">
+                    <label class="col-xs-12 col-sm-3 col-md-2 control-label">店铺</label>
+                    <div class="col-sm-9 col-xs-12">
+                        <select class="form-control" name="store_id" >
+                            {loop $stores $store}
+                            <option value="{$store['id']}" {if $store['id'] == $theone['store_id']} select='selected'{/if} >{$store['name']}</option>
+                            {/loop}
+                        </select>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label class="col-xs-12 col-sm-3 col-md-2 control-label">可预约个数</label>
                     <div class="col-sm-9 col-xs-12">
@@ -32,16 +41,6 @@
                     </div>
                 </div>
 
-                <!--<div class="form-group">-->
-                    <!--<label class="col-xs-12 col-sm-3 col-md-2 control-label">店铺</label>-->
-                    <!--<div class="col-sm-9 col-xs-12">-->
-                        <!--<select class="form-control" name="store_id" >-->
-                            <!--{loop $stores $store}-->
-                            <!--<option value="{$store['id']}" {if $store['id'] == $theone['store_id']} select='selected'{/if} >{$store['name']}</option>-->
-                            <!--{/loop}-->
-                        <!--</select>-->
-                    <!--</div>-->
-                <!--</div>-->
             </div>
         </div>
         <div class="form-group col-sm-12">
