--- a/addons/lanyu_appointment/template/web/welcome_add.html
+++ b/addons/lanyu_appointment/template/web/welcome_add.html
@@ -21,6 +21,19 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-xs-12 col-sm-2 col-md-2 col-lg-1 control-label">定金</label>
+                <div class="col-sm-8 col-lg-4 col-xs-12">
+                    <select name="c_type" class="form-control" >
+                        <option value="3" {if $welcome['c_type'] == 3}selected='selected'{/if}>不需要</option>
+                        <option value="1" {if $welcome['c_type'] == 1}selected='selected'{/if}>定额</option>
+                        <option value="2" {if $welcome['c_type'] == 2}selected='selected'{/if}>总额乘以</option>
+                    </select>
+                </div>
+                <div class="col-sm-8 col-lg-4 col-xs-12">
+                    <input type="text" name="coe" class="form-control" value="{$welcome['coe']}" />
+                </div>
+            </div>
+            <div class="form-group">
                 <div class="col-sm-8 col-lg-9 col-xs-12">
                     <input type="submit" class="btn btn-primary" name="submit" value="提交" />
                     <input type="hidden" name="id" value="{$welcome['id']}" />
