--- a/addons/lanyu_sign/template/web/sign_list.html
+++ b/addons/lanyu_sign/template/web/sign_list.html
@@ -4,13 +4,100 @@
         var status = $("#status").val();
         var bank_id = $("#bank_id").val();
         var day = $("#day").val();
-        location.href="{php echo $this->createWebUrl('sign',array('op'=>'index'));}&status="+status+"&bank_id="+bank_id+"&day="+day;
+        var begin_time = $("#begin_time").val();
+        var end_time = $("#end_time").val();
+        location.href="{php echo $this->createWebUrl('sign',array('op'=>'index'));}&status="+status+"&bank_id="+bank_id+"&day="+day+"&begin_time="+begin_time+"&end_time="+end_time;
     }
     function export_data(){
         var status = $("#status").val();
         var bank_id = $("#bank_id").val();
         var day = $("#day").val();
         location.href="{php echo $this->createWebUrl('sign',array('op'=>'export'));}&status="+status+"&bank_id="+bank_id+"&day="+day;
+    }
+</script>
+<script>
+
+    function chooseAll(){
+        var CheckBox=$('.check_box');
+        for(i=0;i<CheckBox.length;i++){
+            CheckBox[i].checked=true;
+        };
+        $("#chose").attr('onclick','cancelAll();');
+    }
+    function cancelAll(){
+        var CheckBox=$('.check_box');
+        for(i=0;i<CheckBox.length;i++){
+            CheckBox[i].checked=false;
+        };
+        $("#chose").attr('onclick','chooseAll();');
+    }
+    //审核全部
+    function s_all(){
+        var CheckBox=$('.check_box');
+        var ids = {};
+        for(i=0;i<CheckBox.length;i++){
+            if(CheckBox[i].checked==true) {
+                ids[i] = CheckBox[i].value;
+            }
+        };
+        var url = "{php echo $this->createWebUrl('sign',array('op'=>'examine_all'));}";
+        $.ajax({
+            type : 'post',
+            url : url,
+            data : {'ids' : ids},
+            success : function(data){
+                if(data == 111){
+                    alert('操作成功！');
+                    location.reload();
+                }
+            }
+        });
+    }
+    //全部删除
+    function del_all(){
+        if(confirm('是否要删除全部数据？')) {
+            var CheckBox = $('.check_box');
+            var ids = {};
+            for(i=0;i<CheckBox.length;i++){
+                if(CheckBox[i].checked==true) {
+                    ids[i] = CheckBox[i].value;
+                }
+            };
+            var url = "{php echo $this->createWebUrl('sign',array('op'=>'del_all'));}";
+            $.ajax({
+                type: 'post',
+                url: url,
+                data: {'ids': ids},
+                success: function (data) {
+                    if (data == 111) {
+                        alert('操作成功！');
+                        location.reload();
+                    }
+                }
+            });
+        }
+    }
+    //全部开票
+    function v_all(){
+        var CheckBox=$('.check_box');
+        var ids = {};
+        for(i=0;i<CheckBox.length;i++){
+            if(CheckBox[i].checked==true) {
+                ids[i] = CheckBox[i].value;
+            }
+        };
+        var url = "{php echo $this->createWebUrl('sign',array('op'=>'v_all'));}";
+        $.ajax({
+            type : 'post',
+            url : url,
+            data : {'ids' : ids},
+            success : function(data){
+                if(data == 111){
+                    alert('操作成功！');
+                    location.reload();
+                }
+            }
+        });
     }
 </script>
 <ul class="nav nav-tabs">
@@ -41,13 +128,27 @@
                             <option value="2" {if $status == 2}selected ='selected'{/if}>已审</option>
                         </select>
                     </div>
-                    <div class="col-sm-3 col-lg-3">
-                        <input type="date" class="form-control" id="day" />
+                    <div class=" col-xs-12 col-sm-1 col-lg-1">
+                        汇款日期
                     </div>
                     <div class=" col-xs-12 col-sm-2 col-lg-2">
-                        <button class="btn btn-default" onclick="find();"><i class="fa fa-search"></i> 搜索</button>
-                        <button class="btn btn-default" onclick="export_data();"><span class="glyphicon glyphicon-new-window"></span> 导出</button>
+                        <input type="date" class="form-control" id="day" />
                     </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-xs-1">审核时间</div>
+                    <div class="col-xs-4">
+                        <input type="date" class="form-control" id="begin_time" value="{$begin_time}" />
+                    </div>
+                    <div class="col-xs-4">
+                        <input type="date" class="form-control" id="end_time" value="{$end_time}" />
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <button class="btn btn-default" onclick="find();"><i class="fa fa-search"></i> 搜索</button>
+                    <button class="btn btn-default" onclick="export_data();"><span class="glyphicon glyphicon-new-window"></span> 导出</button>
                 </div>
             </div>
         </div>
@@ -55,37 +156,45 @@
     <table class="table table-hover">
         <thead>
         <tr>
+            <th style="width:50px;"  rowspan="{$sign['count']}">
+                <span onclick="chooseAll();" id="chose">全选</span>
+            </th>
             <th >银行名称</th>
-            <th >银行编码</th>
             <th >收款金额</th>
             <th >收款时间</th>
-            <th >汇款账号</th>
+            <th  >汇款账号</th>
             <th >客户名称</th>
-            <th >客户编码</th>
-            <th >填写人</th>
-            <th >状态</th>
-            <th >操作</th>
+            <th >汇款金额</th>
+            <th style="width:80px;" >状态</th>
+            <th style="width:180px;" >操作</th>
         </tr>
         </thead>
         <tbody>
             {loop $signs $sign}
             <tr>
-                <td>{$sign['bank_name']}</td>
-                <td>{$sign['bank_code']}</td>
-                <td>￥{$sign['amount']}元</td>
-                <td>{php echo date('Y-m-d',$sign['create_time'])}</td>
-                <td>{$sign['bank_user']}</td>
-                <td>{$sign['member_name']}</td>
-                <td>{$sign['member_code']}</td>
-                <td>{$sign['username']}</td>
-                <td>
+                <td rowspan="{$sign['count']}">
+                    <input name="groupCheckbox" type="checkbox" value="{$sign['id']}" class="check_box">
+                </td>
+                <td rowspan="{$sign['count']}">{$sign['bank_name']}</td>
+                <td rowspan="{$sign['count']}">￥{$sign['amount']}元</td>
+                <td rowspan="{$sign['count']}">{php echo date('Y-m-d',$sign['create_time'])}</td>
+                <td rowspan="{$sign['count']}">{$sign['bank_user']}</td>
+                <td>{$sign['first_u']['member_name']}</td>
+                <td>{$sign['first_u']['member_amount']}</td>
+                <td rowspan="{$sign['count']}">
                     {if $sign['status'] == 1}
                     未审核
                     {else}
                     已审核
                     {/if}
+                    <br />
+                    {if $sign['invoice'] == 1}
+                    已开票
+                    {else}
+                    未开票
+                    {/if}
                 </td>
-                <td>
+                <td rowspan="{$sign['count']}">
                     {if $sign['status'] == 1}
                     <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'examine'))}" title="审核" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-ok"></span></a>
                     <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'del'))}" onclick="return confirm('如果已审，请先将ERP生成的收款单删除！！');return false;" title="删除" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-remove"></span></a>
@@ -93,9 +202,25 @@
                     {else if $sign['status'] == 2}
                     <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'return'))}" onclick="return confirm('请先将ERP生成的收款单删除！！');return false;" title="返审" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-floppy-remove"></span></a>
                     {/if}
+                    <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'detail'))}"  title="查看" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-search"></span></a>
                 </td>
             </tr>
+            {if $sign['other']}
+            {loop $sign['other'] $s_user}
+            <tr>
+                <td>{$s_user['member_name']}</td>
+                <td>{$s_user['member_amount']}</td>
+            </tr>
             {/loop}
+            {/if}
+            {/loop}
+        <tr>
+            <input type="button" value="全部审核" class="btn-success" onclick="s_all();" />
+            &nbsp;&nbsp;
+            <input type="button" value="全部开票" class="btn-priment" onclick="v_all();" />
+            &nbsp;&nbsp;
+            <input type="button" value="全部删除" class="btn-danger" onclick="del_all();" />
+        </tr>
         </tbody>
     </table>
     {$pager}
